@@ -87,6 +87,7 @@ typedef  int64_t Elf64_Sxword;
 #define EM_386				 3
 #define EM_68K				 4
 #define EM_PPC				20
+#define EM_ARM				40
 #define EM_X86_64			62
 
 /* Identification indices                          */
@@ -206,6 +207,8 @@ typedef union {
 #define SHT_LOUSER			0x80000000
 #define SHT_HIUSER			0xffffffff
 #define SHT_ISSUP(i) ( ((i) <= SHT_SYMTAB_SHNDX) || ((i)>=SHT_GNU_ATTRIBUTES && (i)<=SHT_GNU_VERSION) )
+#define SHT_ARM_EXIDX       0x70000001
+#define SHT_ARM_ATTRIBUTES  0x70000003
 
 #define SHF_WRITE			0x00000001
 #define SHF_ALLOC			0x00000002
@@ -318,6 +321,123 @@ typedef union {
 /**************************************************/
 /*  RELOCATION RECORDS                            */
 /**************************************************/
+
+/*
+ * Sysv relocation types for ARM.
+ */
+
+#define R_ARM_NONE                0
+#define R_ARM_PC24                1
+#define R_ARM_ABS32               2
+#define R_ARM_REL32               3
+#define R_ARM_LDR_PC_G0           4
+#define R_ARM_ABS16               5
+#define R_ARM_ABS12               6
+#define R_ARM_THM_ABS5            7
+#define R_ARM_ABS8                8
+#define R_ARM_SBREL32             9
+#define R_ARM_THM_CALL           10
+#define R_ARM_THM_PC8            11
+#define R_ARM_BREL_ADJ           12
+#define R_ARM_TLS_DESC           13
+#define R_ARM_THM_SWI8           14
+#define R_ARM_XPC25              15
+#define R_ARM_THM_XPC22          16
+#define R_ARM_TLS_DTPMOD32       17
+#define R_ARM_TLS_DTPOFF32       18
+#define R_ARM_TLS_TPOFF32        19
+#define R_ARM_COPY               20
+#define R_ARM_GLOB_DAT           21
+#define R_ARM_JUMP_SLOT          22
+#define R_ARM_RELATIVE           23
+#define R_ARM_GOTOFF32           24
+#define R_ARM_BASE_PREL          25
+#define R_ARM_GOT_BREL           26
+#define R_ARM_PLT32              27
+#define R_ARM_CALL               28
+#define R_ARM_JUMP24             29
+#define R_ARM_THM_JUMP24         30
+#define R_ARM_BASE_ABS           31
+#define R_ARM_ALU_PCREL_7_0      32
+#define R_ARM_ALU_PCREL_15_8     33
+#define R_ARM_ALU_PCREL_23_15    34
+#define R_ARM_LDR_SBREL_11_0_NC  35
+#define R_ARM_ALU_SBREL_19_12_NC 36
+#define R_ARM_ALU_SBREL_27_20_CK 37
+#define R_ARM_TARGET1            38
+#define R_ARM_SBREL31            39
+#define R_ARM_V4BX               40
+#define R_ARM_TARGET2            41
+#define R_ARM_PREL31             42
+#define R_ARM_MOVW_ABS_NC        43
+#define R_ARM_MOVT_ABS           44
+#define R_ARM_MOVW_PREL_NC       45
+#define R_ARM_MOVT_PREL          46
+#define R_ARM_THM_MOVW_ABS_NC    47
+#define R_ARM_THM_MOVT_ABS       48
+#define R_ARM_THM_MOVW_PREL_NC   49
+#define R_ARM_THM_MOVT_PREL      50
+#define R_ARM_THM_JUMP19         51
+#define R_ARM_THM_JUMP6          52
+#define R_ARM_THM_ALU_PREL_11_0  53
+#define R_ARM_THM_PC12           54
+#define R_ARM_ABS32_NOI          55
+#define R_ARM_REL32_NOI          56
+#define R_ARM_ALU_PC_G0_NC       57
+#define R_ARM_ALU_PC_G0          58
+#define R_ARM_ALU_PC_G1_NC       59
+#define R_ARM_ALU_PC_G1          60
+#define R_ARM_ALU_PC_G2          61
+#define R_ARM_LDR_PC_G1          62
+#define R_ARM_LDR_PC_G2          63
+#define R_ARM_LDRS_PC_G0         64
+#define R_ARM_LDRS_PC_G1         65
+#define R_ARM_LDRS_PC_G2         66
+#define R_ARM_LDC_PC_G0          67
+#define R_ARM_LDC_PC_G1          68
+#define R_ARM_LDC_PC_G2          69
+#define R_ARM_ALU_SB_G0_NC       70
+#define R_ARM_ALU_SB_G0          71
+#define R_ARM_ALU_SB_G1_NC       72
+#define R_ARM_ALU_SB_G1          73
+#define R_ARM_ALU_SB_G2          74
+#define R_ARM_LDR_SB_G0          75
+#define R_ARM_LDR_SB_G1          76
+#define R_ARM_LDR_SB_G2          77
+#define R_ARM_LDRS_SB_G0         78
+#define R_ARM_LDRS_SB_G1         79
+#define R_ARM_LDRS_SB_G2         80
+#define R_ARM_LDC_SB_G0          81
+#define R_ARM_LDC_SB_G1          82
+#define R_ARM_LDC_SB_G2          83
+#define R_ARM_MOVW_BREL_NC       84
+#define R_ARM_MOVT_BREL          85
+#define R_ARM_MOVW_BREL          86
+#define R_ARM_THM_MOVW_BREL_NC   87
+#define R_ARM_THM_MOVT_BREL      88
+#define R_ARM_THM_MOVW_BREL      89
+#define R_ARM_TLS_GOTDESC        90
+#define R_ARM_TLS_CALL           91
+#define R_ARM_TLS_DESCSEQ        92
+#define R_ARM_THM_TLS_CALL       93
+#define R_ARM_PLT32_ABS          94
+#define R_ARM_GOT_ABS            95
+#define R_ARM_GOT_PREL           96
+#define R_ARM_GOT_BREL12         97
+#define R_ARM_GOTOFF12           98
+#define R_ARM_GOTRELAX           99
+#define R_ARM_GNU_VTENTRY       100
+#define R_ARM_GNU_VTINHERIT     101
+#define R_ARM_THM_JUMP11        102
+#define R_ARM_THM_JUMP8         103
+#define R_ARM_TLS_GD32          104
+#define R_ARM_TLS_LDM32         105
+#define R_ARM_TLS_LDO32         106
+#define R_ARM_TLS_IE32          107
+#define R_ARM_TLS_LE32          108
+#define R_ARM_TLS_LDO12         109
+#define R_ARM_TLS_LE12          110
+#define R_ARM_TLS_IE12GP        111
 
 /*
  * Sysv relocation types for SPARC.
@@ -1475,6 +1595,129 @@ pmelf_x86_64_rel_name(Elf64_Rela *r)
 		pmelf_namecase( R_X86_64_GOTPC32_TLSDESC  )
 		pmelf_namecase( R_X86_64_TLSDESC_CALL     )
 		pmelf_namecase( R_X86_64_TLSDESC          )
+
+		default:
+		break;
+	}
+	return "UNKNOWN";
+}
+
+static __inline__ const char *
+pmelf_arm_rel_name(Elf32_Rela *r)
+{
+	switch ( ELF64_R_TYPE(r->r_info) ) {
+		pmelf_namecase( R_ARM_NONE                )
+		pmelf_namecase( R_ARM_PC24                )
+		pmelf_namecase( R_ARM_ABS32               )
+		pmelf_namecase( R_ARM_REL32               )
+		pmelf_namecase( R_ARM_LDR_PC_G0           )
+		pmelf_namecase( R_ARM_ABS16               )
+		pmelf_namecase( R_ARM_ABS12               )
+		pmelf_namecase( R_ARM_THM_ABS5            )
+		pmelf_namecase( R_ARM_ABS8                )
+		pmelf_namecase( R_ARM_SBREL32             )
+		pmelf_namecase( R_ARM_THM_CALL            )
+		pmelf_namecase( R_ARM_THM_PC8             )
+		pmelf_namecase( R_ARM_BREL_ADJ            )
+		pmelf_namecase( R_ARM_TLS_DESC            )
+		pmelf_namecase( R_ARM_THM_SWI8            )
+		pmelf_namecase( R_ARM_XPC25               )
+		pmelf_namecase( R_ARM_THM_XPC22           )
+		pmelf_namecase( R_ARM_TLS_DTPMOD32        )
+		pmelf_namecase( R_ARM_TLS_DTPOFF32        )
+		pmelf_namecase( R_ARM_TLS_TPOFF32         )
+		pmelf_namecase( R_ARM_COPY                )
+		pmelf_namecase( R_ARM_GLOB_DAT            )
+		pmelf_namecase( R_ARM_JUMP_SLOT           )
+		pmelf_namecase( R_ARM_RELATIVE            )
+		pmelf_namecase( R_ARM_GOTOFF32            )
+		pmelf_namecase( R_ARM_BASE_PREL           )
+		pmelf_namecase( R_ARM_GOT_BREL            )
+		pmelf_namecase( R_ARM_PLT32               )
+		pmelf_namecase( R_ARM_CALL                )
+		pmelf_namecase( R_ARM_JUMP24              )
+		pmelf_namecase( R_ARM_THM_JUMP24          )
+		pmelf_namecase( R_ARM_BASE_ABS            )
+		pmelf_namecase( R_ARM_ALU_PCREL_7_0       )
+		pmelf_namecase( R_ARM_ALU_PCREL_15_8      )
+		pmelf_namecase( R_ARM_ALU_PCREL_23_15     )
+		pmelf_namecase( R_ARM_LDR_SBREL_11_0_NC   )
+		pmelf_namecase( R_ARM_ALU_SBREL_19_12_NC  )
+		pmelf_namecase( R_ARM_ALU_SBREL_27_20_CK  )
+		pmelf_namecase( R_ARM_TARGET1             )
+		pmelf_namecase( R_ARM_SBREL31             )
+		pmelf_namecase( R_ARM_V4BX                )
+		pmelf_namecase( R_ARM_TARGET2             )
+		pmelf_namecase( R_ARM_PREL31              )
+		pmelf_namecase( R_ARM_MOVW_ABS_NC         )
+		pmelf_namecase( R_ARM_MOVT_ABS            )
+		pmelf_namecase( R_ARM_MOVW_PREL_NC        )
+		pmelf_namecase( R_ARM_MOVT_PREL           )
+		pmelf_namecase( R_ARM_THM_MOVW_ABS_NC     )
+		pmelf_namecase( R_ARM_THM_MOVT_ABS        )
+		pmelf_namecase( R_ARM_THM_MOVW_PREL_NC    )
+		pmelf_namecase( R_ARM_THM_MOVT_PREL       )
+		pmelf_namecase( R_ARM_THM_JUMP19          )
+		pmelf_namecase( R_ARM_THM_JUMP6           )
+		pmelf_namecase( R_ARM_THM_ALU_PREL_11_0   )
+		pmelf_namecase( R_ARM_THM_PC12            )
+		pmelf_namecase( R_ARM_ABS32_NOI           )
+		pmelf_namecase( R_ARM_REL32_NOI           )
+		pmelf_namecase( R_ARM_ALU_PC_G0_NC        )
+		pmelf_namecase( R_ARM_ALU_PC_G0           )
+		pmelf_namecase( R_ARM_ALU_PC_G1_NC        )
+		pmelf_namecase( R_ARM_ALU_PC_G1           )
+		pmelf_namecase( R_ARM_ALU_PC_G2           )
+		pmelf_namecase( R_ARM_LDR_PC_G1           )
+		pmelf_namecase( R_ARM_LDR_PC_G2           )
+		pmelf_namecase( R_ARM_LDRS_PC_G0          )
+		pmelf_namecase( R_ARM_LDRS_PC_G1          )
+		pmelf_namecase( R_ARM_LDRS_PC_G2          )
+		pmelf_namecase( R_ARM_LDC_PC_G0           )
+		pmelf_namecase( R_ARM_LDC_PC_G1           )
+		pmelf_namecase( R_ARM_LDC_PC_G2           )
+		pmelf_namecase( R_ARM_ALU_SB_G0_NC        )
+		pmelf_namecase( R_ARM_ALU_SB_G0           )
+		pmelf_namecase( R_ARM_ALU_SB_G1_NC        )
+		pmelf_namecase( R_ARM_ALU_SB_G1           )
+		pmelf_namecase( R_ARM_ALU_SB_G2           )
+		pmelf_namecase( R_ARM_LDR_SB_G0           )
+		pmelf_namecase( R_ARM_LDR_SB_G1           )
+		pmelf_namecase( R_ARM_LDR_SB_G2           )
+		pmelf_namecase( R_ARM_LDRS_SB_G0          )
+		pmelf_namecase( R_ARM_LDRS_SB_G1          )
+		pmelf_namecase( R_ARM_LDRS_SB_G2          )
+		pmelf_namecase( R_ARM_LDC_SB_G0           )
+		pmelf_namecase( R_ARM_LDC_SB_G1           )
+		pmelf_namecase( R_ARM_LDC_SB_G2           )
+		pmelf_namecase( R_ARM_MOVW_BREL_NC        )
+		pmelf_namecase( R_ARM_MOVT_BREL           )
+		pmelf_namecase( R_ARM_MOVW_BREL           )
+		pmelf_namecase( R_ARM_THM_MOVW_BREL_NC    )
+		pmelf_namecase( R_ARM_THM_MOVT_BREL       )
+		pmelf_namecase( R_ARM_THM_MOVW_BREL       )
+		pmelf_namecase( R_ARM_TLS_GOTDESC         )
+		pmelf_namecase( R_ARM_TLS_CALL            )
+		pmelf_namecase( R_ARM_TLS_DESCSEQ         )
+		pmelf_namecase( R_ARM_THM_TLS_CALL        )
+		pmelf_namecase( R_ARM_PLT32_ABS           )
+		pmelf_namecase( R_ARM_GOT_ABS             )
+		pmelf_namecase( R_ARM_GOT_PREL            )
+		pmelf_namecase( R_ARM_GOT_BREL12          )
+		pmelf_namecase( R_ARM_GOTOFF12            )
+		pmelf_namecase( R_ARM_GOTRELAX            )
+		pmelf_namecase( R_ARM_GNU_VTENTRY         )
+		pmelf_namecase( R_ARM_GNU_VTINHERIT       )
+		pmelf_namecase( R_ARM_THM_JUMP11          )
+		pmelf_namecase( R_ARM_THM_JUMP8           )
+		pmelf_namecase( R_ARM_TLS_GD32            )
+		pmelf_namecase( R_ARM_TLS_LDM32           )
+		pmelf_namecase( R_ARM_TLS_LDO32           )
+		pmelf_namecase( R_ARM_TLS_IE32            )
+		pmelf_namecase( R_ARM_TLS_LE32            )
+		pmelf_namecase( R_ARM_TLS_LDO12           )
+		pmelf_namecase( R_ARM_TLS_LE12            )
+		pmelf_namecase( R_ARM_TLS_IE12GP          )
 
 		default:
 		break;
